Improve bill display logic